[bug fix] Arrow icons on tag editor were invisible over some PF themes;

--- a/src/main/webapp/styles/custom/home.css
+++ b/src/main/webapp/styles/custom/home.css
@@ -468,6 +468,7 @@
 {
 	position: relative;
 	left: 20%;
+	text-shadow: 11px 0px 0px brown;
 }
 
 #tag-palette-form\:tag-editor .fa-arrow-down
@@ -475,6 +476,7 @@
 {
 	position: relative;
 	left: 80%;
+	text-shadow: 11px 0px 0px brown;
 }
 
 #tag-palette-form\:tag-editor td
